cs-map: fix for text overlap in prop-values

--- a/packages/cs-map/src/components/data/data-details/data-details.css
+++ b/packages/cs-map/src/components/data/data-details/data-details.css
@@ -44,6 +44,11 @@
     overflow: hidden;  
     white-space: nowrap;
   }
+
+  .info-prop-text {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   
   .info-image {
     /* width: 28px; */
